cmake_minimum_required(VERSION 3.21)
project(XXXASYBT_CppBase)

set(CMAKE_CXX_STANDARD 14)

# Chapter1
# Example
add_executable(1000 Chapter1/Example/1000.cpp)
add_executable(2060 Chapter1/Example/2060.cpp)
add_executable(2061 Chapter1/Example/2061.cpp)
add_executable(2062 Chapter1/Example/2062.cpp)
add_executable(2063 Chapter1/Example/2063.cpp)
# Practice
add_executable(1001 Chapter1/Practice/1001.cpp)
add_executable(1002 Chapter1/Practice/1002.cpp)
add_executable(1003 Chapter1/Practice/1003.cpp)
add_executable(1004 Chapter1/Practice/1004.cpp)
add_executable(1005 Chapter1/Practice/1005.cpp)


# Chapter2
# Example
add_executable(2064 Chapter2/Example/2064.cpp)
add_executable(2065 Chapter2/Example/2065.cpp)
add_executable(2066 Chapter2/Example/2066.cpp)
add_executable(2067 Chapter2/Example/2067.cpp)
add_executable(2068 Chapter2/Example/2068.cpp)
add_executable(2069 Chapter2/Example/2069.cpp)

# Practice
add_executable(1006 Chapter2/Practice/1006.cpp)
add_executable(1007 Chapter2/Practice/1007.cpp)
add_executable(1008 Chapter2/Practice/1008.cpp)
add_executable(1009 Chapter2/Practice/1009.cpp)
add_executable(1010 Chapter2/Practice/1010.cpp)
add_executable(1011 Chapter2/Practice/1011.cpp)
add_executable(1012 Chapter2/Practice/1012.cpp)
add_executable(1013 Chapter2/Practice/1013.cpp)