cmake_minimum_required(VERSION 3.21)
project(XXXASYBT_CppBase)

set(CMAKE_CXX_STANDARD 14)

# Chapter1
# Example
add_executable(1000 Chapter1/Example/1000.cpp)
add_executable(2060 Chapter1/Example/2060.cpp)
add_executable(2061 Chapter1/Example/2061.cpp)
add_executable(2062 Chapter1/Example/2062.cpp)
add_executable(2063 Chapter1/Example/2063.cpp)
# Practice
add_executable(1001 Chapter1/Practice/1001.cpp)
add_executable(1002 Chapter1/Practice/1002.cpp)
add_executable(1003 Chapter1/Practice/1003.cpp)
add_executable(1004 Chapter1/Practice/1004.cpp)
add_executable(1005 Chapter1/Practice/1005.cpp)


# Chapter2
# Example
add_executable(2064 Chapter2/Example/2064.cpp)
add_executable(2065 Chapter2/Example/2065.cpp)
add_executable(2066 Chapter2/Example/2066.cpp)
add_executable(2067 Chapter2/Example/2067.cpp)
add_executable(2068 Chapter2/Example/2068.cpp)
add_executable(2069 Chapter2/Example/2069.cpp)
add_executable(2070 Chapter2/Example/2070.cpp)
add_executable(2071 Chapter2/Example/2071.cpp)
add_executable(2072 Chapter2/Example/2072.cpp)
add_executable(2073 Chapter2/Example/2073.cpp)

# Practice
add_executable(1006 Chapter2/Practice/1006.cpp)
add_executable(1007 Chapter2/Practice/1007.cpp)
add_executable(1008 Chapter2/Practice/1008.cpp)
add_executable(1009 Chapter2/Practice/1009.cpp)
add_executable(1010 Chapter2/Practice/1010.cpp)
add_executable(1011 Chapter2/Practice/1011.cpp)
add_executable(1012 Chapter2/Practice/1012.cpp)
add_executable(1013 Chapter2/Practice/1013.cpp)
add_executable(1014 Chapter2/Practice/1014.cpp)
add_executable(1015 Chapter2/Practice/1015.cpp)
add_executable(1016 Chapter2/Practice/1016.cpp)
add_executable(1017 Chapter2/Practice/1017.cpp)
add_executable(1018 Chapter2/Practice/1018.cpp)
add_executable(1019 Chapter2/Practice/1019.cpp)
add_executable(1020 Chapter2/Practice/1020.cpp)
add_executable(1021 Chapter2/Practice/1021.cpp)
add_executable(1022 Chapter2/Practice/1022.cpp)
add_executable(1023 Chapter2/Practice/1023.cpp)
add_executable(1024 Chapter2/Practice/1024.cpp)
add_executable(1025 Chapter2/Practice/1025.cpp)
add_executable(1026 Chapter2/Practice/1026.cpp)
add_executable(1027 Chapter2/Practice/1027.cpp)
add_executable(1028 Chapter2/Practice/1028.cpp)
add_executable(1029 Chapter2/Practice/1029.cpp)
add_executable(1030 Chapter2/Practice/1030.cpp)
add_executable(1031 Chapter2/Practice/1031.cpp)
add_executable(1032 Chapter2/Practice/1032.cpp)
add_executable(1033 Chapter2/Practice/1033.cpp)
add_executable(1034 Chapter2/Practice/1034.cpp)
add_executable(1035 Chapter2/Practice/1035.cpp)
add_executable(1036 Chapter2/Practice/1036.cpp)
add_executable(1037 Chapter2/Practice/1037.cpp)
add_executable(1038 Chapter2/Practice/1038.cpp)

# Chapter3
# Example
add_executable(2051 Chapter3/Example/2051.cpp)
add_executable(2052 Chapter3/Example/2052.cpp)
add_executable(2053 Chapter3/Example/2053.cpp)
add_executable(2054 Chapter3/Example/2054.cpp)
add_executable(2055 Chapter3/Example/2055.cpp)
add_executable(2056 Chapter3/Example/2056.cpp)
add_executable(2057 Chapter3/Example/2057.cpp)
add_executable(2058 Chapter3/Example/2058.cpp)
add_executable(2059 Chapter3/Example/2059.cpp)

# Practice
add_executable(1039 Chapter3/Practice/1039.cpp)
add_executable(1040 Chapter3/Practice/1040.cpp)
add_executable(1041 Chapter3/Practice/1041.cpp)
add_executable(1042 Chapter3/Practice/1042.cpp)
add_executable(1043 Chapter3/Practice/1043.cpp)
add_executable(1044 Chapter3/Practice/1044.cpp)
add_executable(1045 Chapter3/Practice/1045.cpp)
add_executable(1046 Chapter3/Practice/1046.cpp)
add_executable(1047 Chapter3/Practice/1047.cpp)
add_executable(1048 Chapter3/Practice/1048.cpp)
add_executable(1049 Chapter3/Practice/1049.cpp)
add_executable(1050 Chapter3/Practice/1050.cpp)
add_executable(1051 Chapter3/Practice/1051.cpp)
add_executable(1052 Chapter3/Practice/1052.cpp)
add_executable(1053 Chapter3/Practice/1053.cpp)
add_executable(1054 Chapter3/Practice/1054.cpp)
add_executable(1055 Chapter3/Practice/1055.cpp)
add_executable(1056 Chapter3/Practice/1056.cpp)
add_executable(1057 Chapter3/Practice/1057.cpp)
add_executable(1058 Chapter3/Practice/1058.cpp)

# Chapter4
# Example
add_executable(2016 Chapter3/Practice/2016.cpp)