cmake_minimum_required(VERSION 3.21)
project(XINXIXUE_AOSAI_YIBENTONG)

set(CMAKE_CXX_STANDARD 14)
set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lstdc++")

# Part 1

# Chapter 1
# Example
add_executable(1000 Chapter1/Example/1000.cpp)
add_executable(2060 Chapter1/Example/2060.cpp)
add_executable(2060s Chapter1/Example/2060s.cpp)
add_executable(2061 Chapter1/Example/2061.cpp)
add_executable(2061s Chapter1/Example/2061s.cpp)
add_executable(2062 Chapter1/Example/2062.cpp)
add_executable(2062s Chapter1/Example/2062s.cpp)
add_executable(2063s Chapter1/Example/2063s.cpp)
add_executable(2063 Chapter1/Example/2063.cpp)
add_executable(1004s Chapter1/Example/1004s.cpp)
add_executable(1004 Chapter1/Example/1004.cpp)

# Practice
add_executable(1001 Chapter1/Practice/1001.cpp)
add_executable(1002 Chapter1/Practice/1002.cpp)
add_executable(1003 Chapter1/Practice/1003.cpp)
add_executable(1005 Chapter1/Practice/1005.cpp)

# Chapter 2
# Example
add_executable(2064 Chapter2/Example/2064.cpp)
add_executable(2064s Chapter2/Example/2064s.cpp)
add_executable(2065s Chapter2/Example/2065s.cpp)
add_executable(2065 Chapter2/Example/2065.cpp)
add_executable(2066s Chapter2/Example/2066s.cpp)
add_executable(2066 Chapter2/Example/2066.cpp)
add_executable(E2.4s Chapter2/Example/E2.4s.cpp)
add_executable(E2.4 Chapter2/Example/E2.4.cpp)
add_executable(2067s Chapter2/Example/2067s.cpp)
add_executable(2067 Chapter2/Example/2067.cpp)
add_executable(2068 Chapter2/Example/2068.cpp)
add_executable(1016s Chapter2/Example/1016s.cpp)
add_executable(1017 Chapter2/Example/1017.cpp)
add_executable(1020s Chapter2/Example/1020s.cpp)
add_executable(1020 Chapter2/Example/1020.cpp)
add_executable(1414s Chapter2/Example/1414s.cpp)
add_executable(1414 Chapter2/Example/1414.cpp)
add_executable(E2.8 Chapter2/Example/E2.8.cpp)
add_executable(E2.9 Chapter2/Example/E2.9.cpp)
add_executable(E2.5.1 Chapter2/Example/E2.5.1.cpp)
add_executable(E2.5.2 Chapter2/Example/E2.5.2.cpp)
add_executable(E2.5.3 Chapter2/Example/E2.5.3.cpp)
add_executable(E2.5.4 Chapter2/Example/E2.5.4.cpp)
add_executable(2069 Chapter2/Example/2069.cpp)
add_executable(2070 Chapter2/Example/2070.cpp)
add_executable(2071s Chapter2/Example/2071s.cpp)
add_executable(2071 Chapter2/Example/2071.cpp)
add_executable(2072 Chapter2/Example/2072.cpp)
add_executable(2072s Chapter2/Example/2072s.cpp)
add_executable(2073s Chapter2/Example/2073s.cpp)
add_executable(2073 Chapter2/Example/2073.cpp)

# Practice
add_executable(1006 Chapter2/Practice/1006.cpp)
add_executable(1007 Chapter2/Practice/1007.cpp)
add_executable(1008 Chapter2/Practice/1008.cpp)
add_executable(1009 Chapter2/Practice/1009.cpp)
add_executable(1010 Chapter2/Practice/1010.cpp)
add_executable(1011 Chapter2/Practice/1011.cpp)
add_executable(1012 Chapter2/Practice/1012.cpp)
add_executable(1013 Chapter2/Practice/1013.cpp)
add_executable(1014 Chapter2/Practice/1014.cpp)
add_executable(1015 Chapter2/Practice/1015.cpp)
add_executable(1018 Chapter2/Practice/1018.cpp)
add_executable(1019 Chapter2/Practice/1019.cpp)
add_executable(1021 Chapter2/Practice/1021.cpp)
add_executable(1022 Chapter2/Practice/1022.cpp)
add_executable(1023 Chapter2/Practice/1023.cpp)
add_executable(1024 Chapter2/Practice/1024.cpp)
add_executable(1025 Chapter2/Practice/1025.cpp)
add_executable(1026 Chapter2/Practice/1026.cpp)
add_executable(1027 Chapter2/Practice/1027.cpp)
add_executable(1028 Chapter2/Practice/1028.cpp)
add_executable(1029 Chapter2/Practice/1029.cpp)
add_executable(1030 Chapter2/Practice/1030.cpp)
add_executable(1031 Chapter2/Practice/1031.cpp)
add_executable(1032 Chapter2/Practice/1032.cpp)
add_executable(1033 Chapter2/Practice/1033.cpp)
add_executable(1034 Chapter2/Practice/1034.cpp)
add_executable(1035 Chapter2/Practice/1035.cpp)
add_executable(1036 Chapter2/Practice/1036.cpp)
add_executable(1037 Chapter2/Practice/1037.cpp)
add_executable(1038 Chapter2/Practice/1038.cpp)

# Chapter 3
# Example
add_executable(2051 Chapter3/Example/2051.cpp)
add_executable(2052 Chapter3/Example/2052.cpp)
add_executable(2053 Chapter3/Example/2053.cpp)
add_executable(2054 Chapter3/Example/2054.cpp)
add_executable(2055 Chapter3/Example/2055.cpp)
add_executable(2056 Chapter3/Example/2056.cpp)
add_executable(2057 Chapter3/Example/2057.cpp)
add_executable(2058 Chapter3/Example/2058.cpp)
add_executable(2059 Chapter3/Example/2059.cpp)

# Practice
add_executable(1039 Chapter3/Practice/1039.cpp)
add_executable(1040 Chapter3/Practice/1040.cpp)
add_executable(1041 Chapter3/Practice/1041.cpp)
add_executable(1042 Chapter3/Practice/1042.cpp)
add_executable(1043 Chapter3/Practice/1043.cpp)
add_executable(1044 Chapter3/Practice/1044.cpp)
add_executable(1045 Chapter3/Practice/1045.cpp)
add_executable(1046 Chapter3/Practice/1046.cpp)
add_executable(1047 Chapter3/Practice/1047.cpp)
add_executable(1048 Chapter3/Practice/1048.cpp)
add_executable(1049 Chapter3/Practice/1049.cpp)
add_executable(1050 Chapter3/Practice/1050.cpp)
add_executable(1051 Chapter3/Practice/1051.cpp)
add_executable(1052 Chapter3/Practice/1052.cpp)
add_executable(1053 Chapter3/Practice/1053.cpp)
add_executable(1054 Chapter3/Practice/1054.cpp)
add_executable(1055 Chapter3/Practice/1055.cpp)
add_executable(1056 Chapter3/Practice/1056.cpp)
add_executable(1057 Chapter3/Practice/1057.cpp)
add_executable(1058 Chapter3/Practice/1058.cpp)

# Chapter 4
# Example
add_executable(2016 Chapter4/Example/2016.cpp)
add_executable(2017 Chapter4/Example/2017.cpp)
add_executable(2017b1 Chapter4/Example/2017b1.cpp)
add_executable(2017b2 Chapter4/Example/2017b2.cpp)
add_executable(2018 Chapter4/Example/2018.cpp)
add_executable(2019 Chapter4/Example/2019.cpp)
add_executable(2020 Chapter4/Example/2020.cpp)
add_executable(2021 Chapter4/Example/2021.cpp)
add_executable(2022 Chapter4/Example/2022.cpp)
add_executable(2023 Chapter4/Example/2023.cpp)
add_executable(2024 Chapter4/Example/2024.cpp)
add_executable(2025 Chapter4/Example/2025.cpp)
add_executable(2026 Chapter4/Example/2026.cpp)
add_executable(2027 Chapter4/Example/2027.cpp)
add_executable(2028 Chapter4/Example/2028.cpp)
add_executable(2029 Chapter4/Example/2029.cpp)
add_executable(2030 Chapter4/Example/2030.cpp)
add_executable(2031 Chapter4/Example/2031.cpp)
add_executable(2032 Chapter4/Example/2032.cpp)
add_executable(2033 Chapter4/Example/2033.cpp)
add_executable(2033T Chapter4/Example/2033T.cpp)

# Practice
add_executable(1059 Chapter4/Practice/1059.cpp)
add_executable(1060 Chapter4/Practice/1060.cpp)
add_executable(1061 Chapter4/Practice/1061.cpp)
add_executable(1062 Chapter4/Practice/1062.cpp)
add_executable(1063 Chapter4/Practice/1063.cpp)
add_executable(1064 Chapter4/Practice/1064.cpp)
add_executable(1065 Chapter4/Practice/1065.cpp)
add_executable(1066 Chapter4/Practice/1066.cpp)
add_executable(1067 Chapter4/Practice/1067.cpp)
add_executable(1068 Chapter4/Practice/1068.cpp)
add_executable(1069 Chapter4/Practice/1069.cpp)
add_executable(1070 Chapter4/Practice/1070.cpp)
add_executable(1071 Chapter4/Practice/1071.cpp)
add_executable(1073 Chapter4/Practice/1073.cpp)
add_executable(1074 Chapter4/Practice/1074.cpp)
add_executable(1075 Chapter4/Practice/1075.cpp)
add_executable(1076 Chapter4/Practice/1076.cpp)
add_executable(1077 Chapter4/Practice/1077.cpp)
add_executable(1078 Chapter4/Practice/1078.cpp)
add_executable(1079 Chapter4/Practice/1079.cpp)
add_executable(1080 Chapter4/Practice/1080.cpp)
add_executable(1081 Chapter4/Practice/1081.cpp)
add_executable(1082 Chapter4/Practice/1082.cpp)
add_executable(1083 Chapter4/Practice/1083.cpp)
add_executable(1084 Chapter4/Practice/1084.cpp)
add_executable(1085 Chapter4/Practice/1085.cpp)
add_executable(1086 Chapter4/Practice/1086.cpp)
add_executable(1087 Chapter4/Practice/1087.cpp)
add_executable(1088 Chapter4/Practice/1088.cpp)
add_executable(1089 Chapter4/Practice/1089.cpp)
add_executable(1090 Chapter4/Practice/1090.cpp)
add_executable(1091 Chapter4/Practice/1091.cpp)
add_executable(1092 Chapter4/Practice/1092.cpp)
add_executable(1093 Chapter4/Practice/1093.cpp)
add_executable(1094 Chapter4/Practice/1094.cpp)
add_executable(1095 Chapter4/Practice/1095.cpp)
add_executable(1096 Chapter4/Practice/1096.cpp)
add_executable(1097 Chapter4/Practice/1097.cpp)
add_executable(1098 Chapter4/Practice/1098.cpp)
add_executable(1099 Chapter4/Practice/1099.cpp)
add_executable(1100 Chapter4/Practice/1100.cpp)
add_executable(1101 Chapter4/Practice/1101.cpp)

# Chapter5
# Example
add_executable(2034 Chapter5/Example/2034.cpp)
add_executable(2035 Chapter5/Example/2035.cpp)
add_executable(2036 Chapter5/Example/2036.cpp)
add_executable(2037 Chapter5/Example/2037.cpp)
add_executable(2038 Chapter5/Example/2038.cpp)
add_executable(2039 Chapter5/Example/2039.cpp)
add_executable(2040 Chapter5/Example/2040.cpp)
add_executable(2041 Chapter5/Example/2041.cpp)
add_executable(L5.10 Chapter5/Example/L5.10.cpp)
add_executable(L5.11 Chapter5/Example/L5.11.cpp)
add_executable(L5.12 Chapter5/Example/L5.12.cpp)
add_executable(2046 Chapter5/Example/2046.cpp)
add_executable(2047 Chapter5/Example/2047.cpp)
add_executable(2050 Chapter5/Example/2050.cpp)
add_executable(1839 Chapter5/Example/1839.cpp)

# Practice
add_executable(1102 Chapter5/Practice/1102.cpp)
add_executable(1103 Chapter5/Practice/1103.cpp)
add_executable(1104 Chapter5/Practice/1104.cpp)
add_executable(1105 Chapter5/Practice/1105.cpp)
add_executable(1106 Chapter5/Practice/1106.cpp)
add_executable(1107 Chapter5/Practice/1107.cpp)
add_executable(1108 Chapter5/Practice/1108.cpp)
add_executable(1109 Chapter5/Practice/1109.cpp)
add_executable(1110 Chapter5/Practice/1110.cpp)
add_executable(1111 Chapter5/Practice/1111.cpp)
add_executable(1112 Chapter5/Practice/1112.cpp)
add_executable(1113 Chapter5/Practice/1113.cpp)
add_executable(1114 Chapter5/Practice/1114.cpp)
add_executable(1115 Chapter5/Practice/1115.cpp)
add_executable(1116 Chapter5/Practice/1116.cpp)
add_executable(1117 Chapter5/Practice/1117.cpp)
add_executable(1118 Chapter5/Practice/1118.cpp)
add_executable(P1.8_01 Chapter5/Practice/P1.8_01.cpp)
add_executable(P1.8_02 Chapter5/Practice/P1.8_02.cpp)
add_executable(P1.8_03 Chapter5/Practice/P1.8_03.cpp)
add_executable(P1.8_04 Chapter5/Practice/P1.8_04.cpp)
add_executable(P1.8_05 Chapter5/Practice/P1.8_05.cpp)

# Chapter6
# Example
add_executable(js Chapter6/Example/js.cpp)
add_executable(czdy1 Chapter6/Example/传值调用.cpp)
